--- a/CoreApp/src/app/app.component.html
+++ b/CoreApp/src/app/app.component.html
@@ -4,11 +4,9 @@
     <h1>
       Welcome to {{ title }}!
     </h1>
-    <button (click)="toggleApp1()">Toggle admin component in app1 from CoreApp</button>
-    <button (click)="toggleApp2()">Toggle admin component in app2 from CoreApp</button>
+
   <h1>Outlets below:</h1>
   
-  <a [routerLink]="['/app1']" >App1</a>
-  <a [routerLink]="['/app2']" >App2</a>
+  <a [routerLink]="['/app1']" >App1</a><br>
   <a [routerLink]="['/somecoreroute']" >Some Core App Route</a>
 <router-outlet></router-outlet>
